[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/assignment/CreateAssignment.gd" type="Script" id=1]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]

[node name="CreateAssignment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.0142
margin_top = -27.0283
margin_right = -13.0142
margin_bottom = -27.0283
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.7469
margin_top = 4.59189
margin_right = -34.2531
margin_bottom = 65.5919
custom_constants/separation = 50

[node name="Title" parent="Container" instance=ExtResource( 2 )]
text = "CREATE ASSIGNMENT"

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1870.0
margin_bottom = 1012.0
custom_constants/separation = 15

[node name="Selections" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 314.0
margin_right = 1555.0
margin_bottom = 85.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Selections"]
margin_top = 3.0
margin_right = 230.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "World:"
align = 1

[node name="WorldDropdown" type="OptionButton" parent="Container/VBoxContainer2/Selections"]
margin_left = 255.0
margin_right = 296.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )

[node name="Label" type="Label" parent="Container/VBoxContainer2/Selections"]
margin_left = 321.0
margin_top = 3.0
margin_right = 1175.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "Select Question Number:"
align = 1

[node name="QuestionNumDropdown" type="OptionButton" parent="Container/VBoxContainer2/Selections"]
margin_left = 1200.0
margin_right = 1241.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )

[node name="Question" type="HBoxContainer" parent="Container/VBoxContainer2"]
editor/display_folded = true
margin_left = 435.0
margin_top = 100.0
margin_right = 1435.0
margin_bottom = 189.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Question"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Question:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Question"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Answer1" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 204.0
margin_right = 1435.0
margin_bottom = 293.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Answer1"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Answer 1:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Answer1"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Answer2" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 308.0
margin_right = 1435.0
margin_bottom = 397.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Answer2"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Answer 2:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Answer2"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Answer3" type="HBoxContainer" parent="Container/VBoxContainer2"]
editor/display_folded = true
margin_left = 435.0
margin_top = 412.0
margin_right = 1435.0
margin_bottom = 501.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Answer3"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Answer 3:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Answer3"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Answer4" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 516.0
margin_right = 1435.0
margin_bottom = 605.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Answer4"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Answer 4:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Answer4"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/VBoxContainer2"]
editor/display_folded = true
margin_top = 620.0
margin_right = 1870.0
margin_bottom = 705.0
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/HBoxContainer2"]
margin_left = 641.0
margin_top = 3.0
margin_right = 1183.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "Correct answer:"

[node name="Dropdown" type="OptionButton" parent="Container/VBoxContainer2/HBoxContainer2"]
margin_left = 1187.0
margin_right = 1228.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer2"]
editor/display_folded = true
margin_top = 720.0
margin_right = 1870.0
margin_bottom = 805.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/VBoxContainer2/HBoxContainer"]
editor/display_folded = true
margin_left = 662.0
margin_right = 868.0
margin_bottom = 85.0

[node name="Button" type="Button" parent="Container/VBoxContainer2/HBoxContainer/HBoxContainer2"]
margin_right = 206.0
margin_bottom = 85.0
rect_min_size = Vector2( 206, 85 )
custom_fonts/font = ExtResource( 3 )
text = "BACK"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer2/HBoxContainer"]
editor/display_folded = true
margin_left = 872.0
margin_right = 1208.0
margin_bottom = 85.0

[node name="ConfirmButton" type="Button" parent="Container/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 85.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "CONFIRM"
align = 2

[node name="Notification" type="Label" parent="Container"]
margin_top = 1062.0
margin_right = 1870.0
margin_bottom = 1141.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="item_selected" from="Container/VBoxContainer2/Selections/WorldDropdown" to="." method="_on_WorldDropdown_item_selected"]
[connection signal="item_selected" from="Container/VBoxContainer2/Selections/QuestionNumDropdown" to="." method="_on_QuestionNumDropdown_item_selected"]
[connection signal="item_selected" from="Container/VBoxContainer2/HBoxContainer2/Dropdown" to="." method="_on_Dropdown_item_selected"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
